modify : database structure, encoder, apache poi