@@ -1,35 +1,30 @@
 package api;
 
-import org.bouncycastle.jce.provider.BouncyCastleProvider;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 import java.security.GeneralSecurityException;
-import java.security.Security;
+import java.util.Base64;
 
 public class SignaturesGenerator {
 
-    public SignaturesGenerator() {
-        Security.addProvider(new BouncyCastleProvider());
-    }
-
-    private static final String PROVIDER = "BC";
-    private static final String HMAC_SHA256 = "HMac-SHA256";
+    private static final String HMAC_SHA256 = "HmacSHA256"; // 표준 이름
 
     public String generateSignature(String timestamp, String method, String resource, String key) {
-        return generateSignature(timestamp + "." + method + "." + resource, key);
+        String data = timestamp + "." + method + "." + resource;
+        return generateSignature(data, key);
     }
 
     public String generateSignature(String data, String key) {
         try {
-            Mac mac = Mac.getInstance(HMAC_SHA256, PROVIDER);
-            mac.init(new SecretKeySpec(key.getBytes(), HMAC_SHA256));
-            return DatatypeConverter.printBase64Binary(mac.doFinal(data.getBytes()));
+            Mac mac = Mac.getInstance(HMAC_SHA256); // 기본 JDK 프로바이더 사용
+            SecretKeySpec secretKeySpec = new SecretKeySpec(key.getBytes(), HMAC_SHA256);
+            mac.init(secretKeySpec);
+            byte[] rawHmac = mac.doFinal(data.getBytes());
+            return Base64.getEncoder().encodeToString(rawHmac); // Java 8 이상
         } catch (GeneralSecurityException e) {
             e.printStackTrace();
+            return null;
         }
-        return null;
     }
-
 }
